objects/Tour_Closed_Hour__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Tours Closed Hours</relationshipLabel>
        <relationshipName>Tours_Closed_Hours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cluster_Name__c</fullName>
        <formula>Building__r.Cluster_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Lead_Email__c</fullName>
        <formula>Building__r.Cluster_Sales_Lead_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Sales Lead Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Lead_Name__c</fullName>
        <formula>Building__r.Cluster_Sales_Lead_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Sales Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Manager_Email__c</fullName>
        <formula>Building__r.Cluster_Sales_Manager_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Manager_Name__c</fullName>
        <formula>Building__r.Cluster_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00AM</fullName>
                </value>
                <value>
                    <fullName>8:30AM</fullName>
                </value>
                <value>
                    <fullName>9:00AM</fullName>
                </value>
                <value>
                    <fullName>9:30AM</fullName>
                </value>
                <value>
                    <fullName>10:00AM</fullName>
                </value>
                <value>
                    <fullName>10:30AM</fullName>
                </value>
                <value>
                    <fullName>11:00AM</fullName>
                </value>
                <value>
                    <fullName>11:30AM</fullName>
                </value>
                <value>
                    <fullName>12:00PM</fullName>
                </value>
                <value>
                    <fullName>12:30PM</fullName>
                </value>
                <value>
                    <fullName>1:00PM</fullName>
                </value>
                <value>
                    <fullName>1:30PM</fullName>
                </value>
                <value>
                    <fullName>2:00PM</fullName>
                </value>
                <value>
                    <fullName>2:30PM</fullName>
                </value>
                <value>
                    <fullName>3:00PM</fullName>
                </value>
                <value>
                    <fullName>3:30PM</fullName>
                </value>
                <value>
                    <fullName>4:00PM</fullName>
                </value>
                <value>
                    <fullName>4:30PM</fullName>
                </value>
                <value>
                    <fullName>5:00PM</fullName>
                </value>
                <value>
                    <fullName>5:30PM</fullName>
                </value>
                <value>
                    <fullName>6:00PM</fullName>
                </value>
                <value>
                    <fullName>6:30PM</fullName>
                </value>
                <value>
                    <fullName>7:00PM</fullName>
                </value>
                <value>
                    <fullName>7:30PM</fullName>
                </value>
                <value>
                    <fullName>8:00PM</fullName>
                </value>
                <value>
                    <fullName>8:30PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portfolio_Name__c</fullName>
        <formula>Building__r.Portfolio_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Sales_Manager_Email__c</fullName>
        <formula>Building__r.Portfolio_Sales_Manager_Email__c</formula>
        <label>Portfolio Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Sales_Manager_Name__c</fullName>
        <formula>Building__r.Portfolio_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <formula>Building__r.Region_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager_Email__c</fullName>
        <formula>Building__r.Regional_Sales_Manager_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager_Name__c</fullName>
        <formula>Building__r.Regional_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00AM</fullName>
                </value>
                <value>
                    <fullName>8:30AM</fullName>
                </value>
                <value>
                    <fullName>9:00AM</fullName>
                </value>
                <value>
                    <fullName>9:30AM</fullName>
                </value>
                <value>
                    <fullName>10:00AM</fullName>
                </value>
                <value>
                    <fullName>10:30AM</fullName>
                </value>
                <value>
                    <fullName>11:00AM</fullName>
                </value>
                <value>
                    <fullName>11:30AM</fullName>
                </value>
                <value>
                    <fullName>12:00PM</fullName>
                </value>
                <value>
                    <fullName>12:30PM</fullName>
                </value>
                <value>
                    <fullName>1:00PM</fullName>
                </value>
                <value>
                    <fullName>1:30PM</fullName>
                </value>
                <value>
                    <fullName>2:00PM</fullName>
                </value>
                <value>
                    <fullName>2:30PM</fullName>
                </value>
                <value>
                    <fullName>3:00PM</fullName>
                </value>
                <value>
                    <fullName>3:30PM</fullName>
                </value>
                <value>
                    <fullName>4:00PM</fullName>
                </value>
                <value>
                    <fullName>4:30PM</fullName>
                </value>
                <value>
                    <fullName>5:00PM</fullName>
                </value>
                <value>
                    <fullName>5:30PM</fullName>
                </value>
                <value>
                    <fullName>6:00PM</fullName>
                </value>
                <value>
                    <fullName>6:30PM</fullName>
                </value>
                <value>
                    <fullName>7:00PM</fullName>
                </value>
                <value>
                    <fullName>7:30PM</fullName>
                </value>
                <value>
                    <fullName>8:00PM</fullName>
                </value>
                <value>
                    <fullName>8:30PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <formula>Building__r.Territory_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Manager_Email__c</fullName>
        <formula>Building__r.Territory_Sales_Manager_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Manager_Name__c</fullName>
        <formula>Building__r.Territory_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour Schedule</label>
        <referenceTo>Tour_Schedule__c</referenceTo>
        <relationshipLabel>Tours Closed Hours</relationshipLabel>
        <relationshipName>Tours_Closed_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weekday__c</fullName>
        <inlineHelpText>Only Fill in a Weekday if you want that day of the week excluded EVERY week</inlineHelpText>
        <label>Weekday</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tour Closed Hour</label>
    <nameField>
        <displayFormat>TCH-{0}</displayFormat>
        <label>Tour Closed Hour Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tours Closed Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>